# Spenser

./: Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml
src/: main.rs  routes.rs
src/controllers/: auth.rs  categories.rs  mod.rs  transactions.rs
src/db/: utils.rs
src/entities/: category.rs  mod.rs  prelude.rs  transaction.rs  user.rs
src/middlewares/: auth.rs
src/migrations/: m20220101_000001_create_users_table.rs  m20250323_095154_create_categories_table.rs  m20250323_101235_create_transactions_table.rs  mod.rs
src/users/: controllers.rs  routes.rs
src/utils/: auth.rs  db.rs  mod.rs  responses.rs
