[package]
name = "Spenser"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44", features = ["full"] }
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-actix-native-tls", "macros" ] }


